--- a/css/style.css
+++ b/css/style.css
@@ -43,60 +43,10 @@ b, strong {
     display: none;
 }
 
-i.fa {
-    text-align: center;
-    color: #444;
-    font-size: 18px;
-}
-
-a i.fa {
-    color: #777;
-    border-color: #777;
-}
-
-/*.page-template-page-slider-php i.fa{*/
-/*color: #fff;*/
-/*}*/
-
-i.fa.circle {
-    border: 2px solid #444;
-    border-radius: 50%;
-    width: 14px;
-    height: 14px;
-    line-height: 14px;
-    padding: 5px;
-}
-
-a:hover i.fa {
-    color: #444;
-}
-
-a i.fa.circle {
-    border-color: #777;
-}
-
-a:hover i.fa.circle {
-    border-color: #444;
-}
-
-i.fa.circle.large {
-    border: 3px solid #444;
-    border-radius: 50%;
-    width: 24px;
-    height: 24px;
-    padding: 7px;
-    font-size: 24px;
-    line-height: 24px;
-}
-
 a {
     text-decoration: none;
     color: inherit;
     outline: none !important;
-}
-
-a:hover {
-    color: #93805d;
 }
 
 .content a {
